[b][color=orange]v3.08[/color], 06.09.2017[/b][list]
[*]Add new filterPriority to install.
[*]Add a new texture.
[*]Add some spell to OzCooldowns.
[*]Fix spellRewards frame in Quest skin.
[*]Update SplashScreen Logo.[/list]

[b][color=orange]v3.07[/color], 31.08.2017[/b][list]
[*]Update install with new filterPriority.
[*]Add the possibility to change the duration text on the Nameplate auras.
[*]Fix errors with PlaySound API.
[*]Increase the size of the Orderhall Commandbar.[/list]

[b][color=orange]v3.06[/color], 29.08.2017[/b][list]
[*]Implement OzCooldowns - Credits Infinitron
[*]Add a new Logo. Thx RZ_Digital
[*]Some layout adjustments.
[*]Add Namplateaura Filter - Credits Infinitron.
[*]Fix a error in AFK screen.
[*]Works with Patch 7.2.5 & 7.3.[/list]

[b][color=orange]v3.05[/color], 17.08.2017[/b][list]
[*]Remove the texture from the ObjectiveTracker Skin.
[*]Fix an error in WeakAura Skin.
[*]Some layout adjustments.
[*]Add a style for the ActionBars Buttons (Like Masque) -- Credits Infinitron for the code permission.
[*]Add compatibily with or without ParchementRemover from AddOnSkins.
[*]Add a QuestCounter on the WorldMap.[/list]

[b][color=orange]v3.04[/color], 09.08.2017[/b][list]
[*]Set the font in the install step messages.
[*]Change the S&L Datatext (Friend, Guild) to use text instead of the icon.
[*]Fix Pet castbar position.
[*]Change the castbar to be default, not transparent.
[*]Fix a error with version check if the SplashScreen is disabled.[/list]

[b][color=orange]v3.03[/color], 07.08.2017[/b][list]
[*]Add some checks to tooltips. :IsForbidden()
[*]Update a lot of skins.
[*]Remove the ExtraActionButton Texture -- Credits Blazeflack (CleanBossButton)
[*]Adds an Player Model to the tooltip. Disabled by default.
[*]Update Changelog to show after the splashScreen.
[*]Add UnitFrame option for "AuraSpacing" and "AuraIconText" -- Credits CustomTweaks by Blazeflack
[*]Fix a lua error with Auctineer.