@@ -1,3 +1,14 @@
+** v3.09, 01.10.2017**
+* Fix a lua error after reload in the BigWigs skin.
+* Add korean locale file.
+* Adjust Orderhall Commandbar skin.
+* Update ObjectiveTracker skin.
+* Update filterPriority in install.
+* Add a skin for the RaidFrame.
+* Add a new tags "health-current-mUI" shows 2 diggets; "power:current-mUI" shows power if 0 instead of hiding it.
+* Adjust the size for the Notifications frame.
+* Remove OzCooldowns, since the original AddOn is working now.
+
 ** v3.08, 06.09.2017**
 * Add new filterPriority to install.
 * Add a new texture.
