@@ -1,7 +1,7 @@
 ## Interface: 70300
 ## Author: Merathilis
 ## Credits: Benik, Darth Predator, Blazeflack, Azilroka, Simpy, Infinitron, fgprodigal, Elv & all AddOn Authors who inspired me.
-## Version: 3.08
+## Version: 3.09
 ## Title: |cff1784d1ElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -12,8 +12,8 @@
 ## SavedVariables: MERData
 ## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, XIV_Databar, BigWigs
-## X-ElvVersion: 10.62
-## X-Curse-Packaged-Version: 3.08
+## X-ElvVersion: 10.64
+## X-Curse-Packaged-Version: 3.09
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 ## X-Tukui-ProjectID: 1
