@@ -16,11 +16,16 @@ local SOUNDKIT = SOUNDKIT
 
 local ChangeLogData = {
 	"Changes:",
-		"• Add new filterPriority to install.",
-		"• Add a new texture.",
-		"• Add some spell to OzCooldowns.",
-		"• Fix spellRewards frame in Quest skin.",
-		"• Update SplashScreen Logo.",
+		"• Fix a lua error after reload in the BigWigs skin.",
+		"• Add korean locale file.",
+		"• Adjust Orderhall Commandbar skin.",
+		"• Update ObjectiveTracker skin.",
+		"• Update filterPriority in install.",
+		"• Add a skin for the RaidFrame.",
+		"• Add a new tags 'health-current-mUI' shows 2 diggets; 'power:current-mUI'",
+		"•   shows power if 0 instead of hiding it.",
+		"• Adjust the size for the Notifications frame.",
+		"• Remove OzCooldowns, since the original AddOn is working now.",
 		-- "• ",
 	" ",
 	"Notes:",
