@@ -1,3 +1,14 @@
+[b][color=orange]v3.09[/color], 01.10.2017[/b][list]
+[*]Fix a lua error after reload in the BigWigs skin.
+[*]Add korean locale file.
+[*]Adjust Orderhall Commandbar skin.
+[*]Update ObjectiveTracker skin.
+[*]Update filterPriority in install.
+[*]Add a skin for the RaidFrame.
+[*]Add a new tags "health-current-mUI" shows 2 diggets; "power:current-mUI" shows power if 0 instead of hiding it.
+[*]Adjust the size for the Notifications frame.
+[*]Remove OzCooldowns, since the original AddOn is working now.[/list]
+
 [b][color=orange]v3.08[/color], 06.09.2017[/b][list]
 [*]Add new filterPriority to install.
 [*]Add a new texture.
